--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
   agent { label 'workstation'}
   
   parameters {
-    choice(name: 'ENV', choices: ['dev', 'prod'], description: 'Choose ENvironment')
+    choice(name: 'ENV', choices: ['dev', 'prod'], description: 'Choose Environment')
   }
   stages {
      
